[tool.poetry]
name = "create-color-wheel.py"
version = "0.1.0"
description = ""
authors = ["kanta <101532773+kantas-spike@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.10"
Pillow = "^9.2.0"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
taskipy = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "black *.py"
lint = "flake8 --extend-ignore=E203 --max-line-length=119"

[tool.black]
line-length = 119